--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section class="experience" id="experience">
       <h2 class="heading">My<span>Experience</span><span class="animate scroll" style="--i:1;"></span></h2>
       <div class="btn-box btns" style="width:100%; display: flex; justify-content:center;gap: 2rem; text-align: center; margin-bottom:5rem">
-        <a style="width:19rem; font-size:16px;" href="vkelley-resume.pdf" download  class="btn">Download Resume</a>
+        <a style="width:19rem; font-size:16px;" href="Vergil Kelley resume.pdf" download  class="btn">Download Resume</a>
         <span class="animate scroll" style="--i:5;"></span>
         <a style="width:19rem; font-size:16px;" href="Letter-of-Recommendation_Kelley.pdf" download  class="btn">Reference Letter</a>
         <span class="animate scroll" style="--i:5;"></span>
@@ -249,7 +249,7 @@
             <div class="skills-content" style="width:35vw">
                 <p>webQwick is a SaaS that allows subscribers to create custom websites for thier businesses. These websites have a user friendly admin panel for updating content, email addresses for the business and staff, appointment booking and online payments capability via the Stripe API.</p>
                 <br>
-                <P>HTML, CSS, JavaScript, jQuery, Stripe API, SQL, MySQL</P>
+                <P>HTML, CSS, JavaScript, jQuery, PHP, Stripe API, SQL, MySQL</P>
                 <br>
                 <a href="https://webqwick.com/" target="_blank"><img class="project-imgs" src="images/webqwick.png" alt="webQwick SaaS website landing page" target="_blank"></a>
                 
@@ -290,7 +290,7 @@
             <div class="skills-content" style="width:35vw">
                 <p>Barbershop website template with an easy to use admin panel that allows you to custimize colors, update text and search and change images. Provides a database, business email, appointment booking and Stripe API payment gateway for online sales.</p>
                 <br>
-                <P>HTML, CSS, JavaScript, jQuery, Stripe API, SQL, MySQL</P>
+                <P>HTML, CSS, JavaScript, jQuery, PHP, Stripe API, SQL, MySQL</P>
                 <br>
                 <a href="https://your.bestbarbershop.vergildkelley.com/" target="_blank"><img class="project-imgs" src="images/your-best-barbershop.png" alt="barbershop landing page"></a>
               <!-- <div class="progress">
@@ -319,7 +319,7 @@
             <div class="skills-content" style="width:35vw">
                 <p>Restaurant website template with an easy to use admin panel that allows you to custimize colors, update text and search and change images. Provides a database, business email, appointment booking and Stripe API payment gateway for online sales.</p>
                 <br>
-                <P>HTML, CSS, JavaScript, jQuery, Stripe API, SQL, MySQL</P>
+                <P>HTML, CSS, JavaScript, jQuery, PHP, Stripe API, SQL, MySQL</P>
                 <br>
                 <a href="https://your.restaurant.vergildkelley.com/" target="_blank"><img class="project-imgs" src="images/your-restaurant.png" alt="nail salon landing page"></a>
             </div>
@@ -332,7 +332,7 @@
             <div class="skills-content" style="width:35vw">
                 <p>Salon website template with an easy to use admin panel that allows you to custimize colors, update text and search and change images. Provides a database, business email, appointment booking and Stripe API payment gateway for online sales.</p>
                 <br>
-                <P>HTML, CSS, JavaScript, jQuery, Stripe API, SQL, MySQL</P>
+                <P>HTML, CSS, JavaScript, jQuery, PHP, Stripe API, SQL, MySQL</P>
                 <br>
                 <a href="https://your.salon.vergildkelley.com" target="_blank"><img class="project-imgs" src="images/your-nail-salon-landing-page.png" alt="nail salon landing page"></a>
             </div>
