changed exprience text

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         <span class="animate scroll" style="--i:2;"></span>
       </div>
       <div class="about-content">
-        <h3>Full-Stack Developer<span class="animate scroll" style="--i:3;"></span></h3>
-        <p>Highly skilled full-stack web developer with 7+ years of experience in creating
-          dynamic and user-friendly websites. A proven track record of
+        <h3>Full-Stack Web Developer<span class="animate scroll" style="--i:3;"></span></h3>
+        <p>Highly skilled web developer with 7 years experience creating
+          dynamic, high-converting web applications. Proven track record of
           delivering exceptional web solutions for diverse clients. Proficient
-          in front-end and back-end development technologies, UI/UX design,
-          and project management. Excel at collaborating with teams or
-          autonomously to reach prescribed goals.<span class="animate scroll" style="--i:4;"></span></p>
+          in front-end and back-end development technologies, UI/UX design, SEO, and
+          project management. Excel at collaborating with teams or autonomously
+          to reach prescribed goals.<span class="animate scroll" style="--i:4;"></span></p>
         <!--<div class="btn-box btns">-->
         <!--  <a href="vkelley-resume.pdf" download  class="btn">Download Resume</a>-->
         <!--  <span class="animate scroll" style="--i:5;"></span>-->
@@ -192,11 +192,10 @@
                 <div class="year"><i class='bx bxs-calendar'></i>July 2023 - Present</div>
                 <h3>Web Developer</h3>
                 <p>Freelance - Chicago, IL</p>
-                <p>Design and develop custom websites for clients using HTML,CSS, JavaScript and Bootstrap on the front-end.
-                  Implement back-end functionality using PHP and MySQL.
-                  Collaborate closely with clients to understand project requirements, provide regular updates, and ensure satisfaction.
-                  Conduct testing, debugging, and SEO to deliver high-performance, high-converting websites.
-                  Manage multiple projects simultaneously, adhering to project timelines and budgets.</p>
+                <p>Design and develop visually appealing, high-converting web pages for small to midsized businesses. Implement back-end CRUD functionality using PHP, SQL and MySQL. Collaborate closely with clients to understand project
+                  requirements, provide regular updates, and ensure satisfaction. Conduct testing, debugging, and optimization to deliver
+                  high-performance websites and web applications. Manage multiple projects simultaneously, adhering to project
+                  timelines and budgets.</p>
               </div>
               <span class="animate scroll" style="--i:5;"></span>
             </div>
@@ -205,10 +204,8 @@
                 <div class="year"><i class='bx bxs-calendar'></i>August 2021 - June 2023</div>
                 <h3>Web Developer</h3>
                 <p>Loyola Press - Chicago, IL</p>
-                <p>Successfully debugged a two-year-old server issue that was causing websites to go down daily.
-                  Boosted network and system data availability and integrity through preventive maintenance and upgrades.
-                  Designed, built and maintained WordPress websites using HTML, CSS, PHP and JavaScript.
-                  Collaborated with various departments to bring new digital textbooks to market.</p>
+                <p>Successfully debugged a two-year-old server issue that was causing
+                  websites to go down daily. Boosted network and system data availability and integrity through preventive maintenance and upgrades. Build and maintain websites and web applications, deployed on Amazon Web Services cloud computing platform. Collaborate with various departments to gather technical requirements and assets for digital textbooks.</p>
               </div>
               
             </div>
@@ -218,10 +215,11 @@
                 <div class="year"><i class='bx bxs-calendar'></i>March 2019 - February 2022</div>
                 <h3>Web Developer</h3>
                 <p>Velocity Merchant Services - Downers Grove, IL</p>
-                <p>Oversee the design, development and implementation of merchant WordPress websites, including registering/transferring domain names, DNS and A/CNAME records.
-                  Monitored, maintained and updated plugins and coded custom functionality using HTML, CSS, JavaScript and PHP.
-                  Communicated with management and clients about the status of websites under construction.
-                  Designed a visually appealing prototype application, which led to high praise from management.</p>
+                <p>Design, develop and implement merchant
+                  WordPress websites, including registering domains
+                  and configuring DNS and A/CNAME records. Monitor, maintain and updated plugins and code custom functionality for WordPress websites via Cpanel. Communicate with management and merchants regarding the status of
+                  websites under construction. Designed a visually appealing prototype web application, which led to high praise from management. Successfully debugged more than 20 websites upon employment,
+                  getting them back online.</p>
               </div>
             </div>
             <span class="animate scroll" style="--i:6;"></span>
@@ -230,10 +228,11 @@
                 <div class="year"><i class='bx bxs-calendar'></i>April 2017 - February 2019</div>
                 <h3>Web Developer</h3>
                 <p>Freelance - Chicago, IL</p>
-                <p>Providing front-end web development services by creating high-converting websites and pages using CMSs like Contentful, Drupal and WordPress.
-                  Created clean, reusable, cross-browser compatible code to design and create visually appealing web pages.
-                  Collaborated with end-users to find creative and innovative solutions that delivered superior results.
-                  Conducted website audits, identified areas for improvement, and implemented SEO best practices.
+                <p>Provide front-end web development services by creating
+                  high-converting websites and pages using CMSs like Contentful,
+                  Drupal and WordPress. Create clean, reusable, cross-browser compatible code producing visually appealing web pages. Collaborate with stakeholders to find creative and innovative
+                  solutions that deliver superior results. Conduct website audits, identify areas for improvement, and
+                  implement SEO best practices.
                   </p>
               </div>
             </div>
